@@ -1,3 +1,9 @@
+2006-07-19  Benoît Dejean  <benoit@placenet.org>
+
+	* src/disks.c: (remove_old_disks), (cb_update_disks):
+
+	Oops, i forgot to remove old disks from the list.
+
 2006-07-13  Benoît Dejean  <benoit@placenet.org>
 
 	* src/procdialogs.c:
